--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,8 @@
         <dependencies>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
-                <artifactId>it.tidalwave.util.logging</artifactId>
-                <version>1.1.0-SNAPSHOT</version>
+                <artifactId>it.tidalwave.util</artifactId>
+                <version>1.10.31-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
@@ -192,6 +192,7 @@
     <modules>
         <module>Beans</module>
         <module>BeansBinding</module>
+        <module>DependencyManagement</module>
         <module>Logger</module>
         <module>SingleLineLogFormatter</module>
         <module>StopWatch</module>
