--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>superpom</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
@@ -197,7 +197,6 @@
         <module>Logger</module>
         <module>SingleLineLogFormatter</module>
         <module>StopWatch</module>
-        <module>SuperPOM</module>
         <module>Utilities</module>
     </modules>
 
