--- a/pom.xml
+++ b/pom.xml
@@ -100,50 +100,11 @@
                 <artifactId>it.tidalwave.stopwatch</artifactId>
                 <version>1.1.0-SNAPSHOT</version>
             </dependency>
-
-            <dependency>
-                <groupId>com.kenai.nbpwr</groupId>
-                <artifactId>org-jdesktop-beansbinding</artifactId>
-                <version>1.2.1.5</version>
-            </dependency>
-            <dependency>
-                <groupId>com.kenai.nbpwr</groupId>
-                <artifactId>net-sf-cglib</artifactId>
-                <version>2.1.3.5</version>
-            </dependency>
-            <dependency>
-                <groupId>com.kenai.nbpwr</groupId>
-                <artifactId>javax-annotation</artifactId>
-                <version>1.3.7.3</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.google.code.findbugs</groupId>
-                <artifactId>jsr305</artifactId>
-                <version>1.3.7</version>
-                <!-- WARNING: don't use 1.3.8, it has got a broken pom which brings is tons of useless stuff! -->
-            </dependency>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.7</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mockito</groupId>
-                <artifactId>mockito-all</artifactId>
-                <version>1.8.2</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <build>
-        <!-- ***********************************************************************************************************
-        *
-        *
-        *
-        ************************************************************************************************************ -->
         <plugins>
-            <!-- Compiler -->
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
@@ -151,7 +112,6 @@
                     <target>1.5</target>
                 </configuration>
             </plugin>
-
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
@@ -191,13 +151,7 @@
     </dependencies>
 
     <modules>
-        <module>Beans</module>
-        <module>BeansBinding</module>
-        <module>DependencyManagement</module>
-        <module>Logger</module>
-        <module>SingleLineLogFormatter</module>
-        <module>StopWatch</module>
-        <module>Utilities</module>
+        <module>modules</module>
     </modules>
 
 </project>
