Fixed the issue tracker url.

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <issueManagement>
         <system>Jira</system>
-        <url>https://services.tidalwave.it/jira/browse/BM</url>
+        <url>http://kenai.com/jira/browse/THESEFOOLISHTHINGS</url>
     </issueManagement>
 
     <mailingLists>
