--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -19,6 +19,7 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <!-- TODO: depend on BBB! -->
                 <groupId>com.kenai.nbpwr</groupId>
                 <artifactId>org-jdesktop-beansbinding</artifactId>
                 <version>1.2.1.5</version>
@@ -26,12 +27,12 @@
             <dependency>
                 <groupId>com.kenai.nbpwr</groupId>
                 <artifactId>net-sf-cglib</artifactId>
-                <version>2.1.3.5</version>
+                <version>2.1.3-201002241208</version>
             </dependency>
             <dependency>
                 <groupId>com.kenai.nbpwr</groupId>
                 <artifactId>javax-annotation</artifactId>
-                <version>1.3.7.3</version>
+                <version>1.3.7-201002241900</version>
             </dependency>
 
             <dependency>
