--- a/modules/BeansBinding/pom.xml
+++ b/modules/BeansBinding/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>1.1.1</version>
+        <version>1.1.2-SNAPSHOT</version>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it.tidalwave.swing.beansbinding</artifactId>
-    <version>1.1.9</version>
+    <version>1.1.10-SNAPSHOT</version>
     <packaging>nbm</packaging>
     <name>TheseFoolishThings - Swing BeansBindings</name>
 
