--- a/modules/Utilities/pom.xml
+++ b/modules/Utilities/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
         <relativePath>..</relativePath>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it.tidalwave.util</artifactId>
     <packaging>nbm</packaging>
-    <version>1.10.33-SNAPSHOT</version>
+    <version>1.10.33</version>
     <name>TheseFoolishThings - Utilities</name>
 
     <dependencies>
