--- a/modules/SingleLineLogFormatter/pom.xml
+++ b/modules/SingleLineLogFormatter/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>1.2.0</version>
+        <version>1.2.1-SNAPSHOT</version>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it.tidalwave.singlelinelogformatter</artifactId>
-    <version>1.1.2</version>
+    <version>1.1.3-SNAPSHOT</version>
     <packaging>nbm</packaging>
     <name>TheseFoolishThings - Single Line Log Formatter</name>
 
