--- a/modules/Beans/pom.xml
+++ b/modules/Beans/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
-    <artifactId>it.tidalwave.beans</artifactId>
+    <artifactId>it-tidalwave-beans</artifactId>
     <version>1.4.12-SNAPSHOT</version>
     <packaging>nbm</packaging>
     <name>TheseFoolishThings - Beans</name>
@@ -18,7 +18,7 @@
     <dependencies>
         <dependency>
             <groupId>it.tidalwave.thesefoolishthings</groupId>
-            <artifactId>it.tidalwave.util.logging</artifactId>
+            <artifactId>it-tidalwave-util-logging</artifactId>
         </dependency>
         <dependency>
             <groupId>com.kenai.nbpwr</groupId>
@@ -36,7 +36,7 @@
         <!-- Test -->
         <dependency>
             <groupId>it.tidalwave.thesefoolishthings</groupId>
-            <artifactId>it.tidalwave.singlelinelogformatter</artifactId>
+            <artifactId>it-tidalwave-util-logging-singlelinelogformatter</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
