--- a/modules/Logger/pom.xml
+++ b/modules/Logger/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
-    <artifactId>it.tidalwave.util.logging</artifactId>
+    <artifactId>it-tidalwave-util-logging</artifactId>
     <version>1.1.3-SNAPSHOT</version>
     <packaging>nbm</packaging>
     <name>TheseFoolishThings - Logger</name>
