--- a/modules/SingleLineLogFormatter/pom.xml
+++ b/modules/SingleLineLogFormatter/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
-    <artifactId>it.tidalwave.singlelinelogformatter</artifactId>
+    <artifactId>it-tidalwave-util-logging-singlelinelogformatter</artifactId>
     <version>1.1.3-SNAPSHOT</version>
     <packaging>nbm</packaging>
     <name>TheseFoolishThings - Single Line Log Formatter</name>
