--- a/modules/StopWatch/pom.xml
+++ b/modules/StopWatch/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
-    <artifactId>it.tidalwave.stopwatch</artifactId>
+    <artifactId>it-tidalwave-stopwatch</artifactId>
     <packaging>nbm</packaging>
     <version>1.1.3-SNAPSHOT</version>
     <name>TheseFoolishThings - StopWatch</name>
