--- a/pom.xml
+++ b/pom.xml
@@ -68,32 +68,32 @@
         <dependencies>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
-                <artifactId>it.tidalwave.util</artifactId>
+                <artifactId>it-tidalwave-util</artifactId>
                 <version>1.10.34-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
-                <artifactId>it.tidalwave.beans</artifactId>
+                <artifactId>it-tidalwave-beans</artifactId>
                 <version>1.4.12-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
-                <artifactId>it.tidalwave.swing.beansbinding</artifactId>
+                <artifactId>it-tidalwave-swing-beansbinding</artifactId>
                 <version>1.1.11-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
-                <artifactId>it.tidalwave.singlelinelogformatter</artifactId>
+                <artifactId>it-tidalwave-util-logging-singlelinelogformatter</artifactId>
                 <version>1.1.3-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
-                <artifactId>it.tidalwave.util.logging</artifactId>
+                <artifactId>it-tidalwave-util-logging</artifactId>
                 <version>1.1.3-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>it.tidalwave.thesefoolishthings</groupId>
-                <artifactId>it.tidalwave.stopwatch</artifactId>
+                <artifactId>it-tidalwave-stopwatch</artifactId>
                 <version>1.1.3-SNAPSHOT</version>
             </dependency>
         </dependencies>
