Fix for THESEFOOLISHTHINGS-16.

--- a/modules/BeansBinding/src/main/resources/it/tidalwave/swing/beansbinding/Bundle.properties
+++ b/modules/BeansBinding/src/main/resources/it/tidalwave/swing/beansbinding/Bundle.properties
@@ -1,2 +1,2 @@
-OpenIDE-Module-Display-Category=OpenBlueSky
-OpenIDE-Module-Name=OpenBlueSky - BeansBinding
+OpenIDE-Module-Display-Category: TheseFoolishThings
+OpenIDE-Module-Name: TheseFoolishThings - BeansBinding
