--- a/modules/StopWatch/src/main/resources/it/tidalwave/stopwatch/Bundle.properties
+++ b/modules/StopWatch/src/main/resources/it/tidalwave/stopwatch/Bundle.properties
@@ -1,2 +1,2 @@
 OpenIDE-Module-Display-Category: TheseFoolishThings
-OpenIDE-Module-Name: TheseFoolishThings - Beans
+OpenIDE-Module-Name: TheseFoolishThings - StopWatch
