Fix for hg push.

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
         <scm.repo.browse.url>http://kenai.com/projects/thesefoolishthings/sources/src/show</scm.repo.browse.url>
     </properties>
 
+    <!-- Repeated because of http://jira.codehaus.org/browse/SCM-442 -->
+    <scm>
+        <connection>scm:hg:${scm.repo.readonly.url}</connection>
+        <developerConnection>scm:hg:${scm.repo.effective.url}</developerConnection>
+        <url>${scm.repo.browse.url}</url>
+    </scm>
+
     <repositories>
         <repository>
             <id>snapshots-oss.sonatype.org</id>
