--- a/modules/Beans/pom.xml
+++ b/modules/Beans/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>1.3.0-SNAPSHOT</version>
+        <version>1.3.0</version>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-beans</artifactId>
-    <version>1.4.12-SNAPSHOT</version>
+    <version>1.4.12</version>
     <packaging>nbm</packaging>
     <name>TheseFoolishThings - Beans</name>
 
