--- a/modules/Utilities/pom.xml
+++ b/modules/Utilities/pom.xml
@@ -49,6 +49,7 @@
                 <configuration>
                     <publicPackages>
                         <publicPackage>it.tidalwave.util</publicPackage>
+                        <publicPackage>it.tidalwave.text</publicPackage>
                     </publicPackages>
                 </configuration>
             </plugin>
