--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
                 <artifactId>it-tidalwave-stopwatch</artifactId>
                 <version>1.1.4-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>it.tidalwave.thesefoolishthings</groupId>
+                <artifactId>it-tidalwave-android-org-openide-util</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
