--- a/.hgignore
+++ b/.hgignore
@@ -1,6 +1,10 @@
 target
-StopWatch/target
-SingleLineLogFormatter/target
 .repository
 .revision
+release.properties
+\.orig\..*$
+\.orig$
+\.chg\..*$
+\.rej$
+\.conflict\~$
 
