Fix for avoid failing mvn release:prepare.

--- a/modules/NetBeansPlatformUtilitiesForAndroid/pom.xml
+++ b/modules/NetBeansPlatformUtilitiesForAndroid/pom.xml
@@ -35,6 +35,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom> <!-- otherwise release fails -->
                             <filters>
                                 <filter>
                                     <artifact>org.netbeans.api:org-openide-util</artifact>
