Spinned off AWT/Swing for Android.

--- a/modules/NetBeansPlatformUtilitiesForAndroid/pom.xml
+++ b/modules/NetBeansPlatformUtilitiesForAndroid/pom.xml
@@ -20,6 +20,10 @@
             <artifactId>org-openide-util</artifactId>
             <version>RELEASE68</version>
         </dependency>
+        <dependency>
+            <groupId>it.tidalwave.thesefoolishthings</groupId>
+            <artifactId>it-tidalwave-android-awt</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
