Fix: doesn't copy any longer the AWT/Swing stuff for Android.

--- a/modules/NetBeansPlatformUtilitiesForAndroid/pom.xml
+++ b/modules/NetBeansPlatformUtilitiesForAndroid/pom.xml
@@ -47,6 +47,12 @@
                                         <exclude>org/netbeans/modules/openide/util/ActiveQueue.class</exclude>
                                     </excludes>
                                 </filter>
+                                <filter>
+                                    <artifact>it.tidalwave.thesefoolishthings:it-tidalwave-android-awt</artifact>
+                                    <excludes>
+                                        <exclude>**/*</exclude>
+                                    </excludes>
+                                </filter>
                             </filters>
                             <relocations>
                                 <relocation>
