Added artifact attachment for sources and javadocs.

--- a/modules/NetBeansPlatformUtilitiesForAndroid/pom.xml
+++ b/modules/NetBeansPlatformUtilitiesForAndroid/pom.xml
@@ -29,6 +29,18 @@
             <version>RELEASE68</version>
         </dependency>
         <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-openide-util</artifactId>
+            <version>RELEASE68</version>
+            <classifier>sources</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-openide-util</artifactId>
+            <version>RELEASE68</version>
+            <classifier>javadoc</classifier>
+        </dependency>
+        <dependency>
             <groupId>it.tidalwave.thesefoolishthings</groupId>
             <artifactId>it-tidalwave-android-awt</artifactId>
         </dependency>
@@ -79,6 +91,35 @@
                                     <shadedPattern>it.tidalwave.netbeans.modules.openide.util.ActiveQueue</shadedPattern>
                                 </relocation>
                             </relocations>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>attach-artifacts</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attach-artifact</goal>
+                        </goals>
+                        <configuration>
+                            <artifacts>
+                                <artifact>
+                                    <file>${settings.localRepository}/org/netbeans/api/org-openide-util/RELEASE68/org-openide-util-RELEASE68-sources.jar</file>
+                                    <type>jar</type>
+                                    <classifier>sources</classifier>
+                                </artifact>
+                                <artifact>
+                                    <file>${settings.localRepository}/org/netbeans/api/org-openide-util/RELEASE68/org-openide-util-RELEASE68-javadoc.jar</file>
+                                    <type>jar</type>
+                                    <classifier>javadoc</classifier>
+                                </artifact>
+                            </artifacts>
                         </configuration>
                     </execution>
                 </executions>
