[maven-release-plugin] prepare release thesefoolishthings-1.5.1

--- a/modules/NetBeansPlatformUtilitiesForAndroid/pom.xml
+++ b/modules/NetBeansPlatformUtilitiesForAndroid/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>1.5.1-SNAPSHOT</version>
+        <version>1.5.1</version>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-android-org-openide-util</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
     <packaging>jar</packaging>
     <name>TheseFoolishThings - NetBeans Platform Utilities for Android</name>
 
