--- a/modules/StopWatch/pom.xml
+++ b/modules/StopWatch/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>modules</artifactId>
-        <version>1.5.1-SNAPSHOT</version>
+        <version>1.5.1</version>
     </parent>
 
     <groupId>it.tidalwave.thesefoolishthings</groupId>
     <artifactId>it-tidalwave-stopwatch</artifactId>
     <packaging>nbm</packaging>
-    <version>1.1.7-SNAPSHOT</version>
+    <version>1.1.7</version>
     <name>TheseFoolishThings - StopWatch</name>
 
     <dependencies>
