Fix for THESEFOOLISHTHINGS-28.

--- a/modules/NetBeansPlatformUtilitiesForAndroid/pom.xml
+++ b/modules/NetBeansPlatformUtilitiesForAndroid/pom.xml
@@ -29,18 +29,6 @@
             <version>RELEASE68</version>
         </dependency>
         <dependency>
-            <groupId>org.netbeans.api</groupId>
-            <artifactId>org-openide-util</artifactId>
-            <version>RELEASE68</version>
-            <classifier>sources</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.netbeans.api</groupId>
-            <artifactId>org-openide-util</artifactId>
-            <version>RELEASE68</version>
-            <classifier>javadoc</classifier>
-        </dependency>
-        <dependency>
             <groupId>it.tidalwave.thesefoolishthings</groupId>
             <artifactId>it-tidalwave-android-awt</artifactId>
         </dependency>
@@ -110,16 +98,52 @@
                         <configuration>
                             <artifacts>
                                 <artifact>
-                                    <file>${settings.localRepository}/org/netbeans/api/org-openide-util/RELEASE68/org-openide-util-RELEASE68-sources.jar</file>
+                                    <file>target/${artifactId}-${version}-sources.jar</file>
                                     <type>jar</type>
                                     <classifier>sources</classifier>
                                 </artifact>
                                 <artifact>
-                                    <file>${settings.localRepository}/org/netbeans/api/org-openide-util/RELEASE68/org-openide-util-RELEASE68-javadoc.jar</file>
+                                    <file>target/${artifactId}-${version}-javadoc.jar</file>
                                     <type>jar</type>
                                     <classifier>javadoc</classifier>
                                 </artifact>
                             </artifacts>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.netbeans.api</groupId>
+                                    <artifactId>org-openide-util</artifactId>
+                                    <version>RELEASE68</version>
+                                    <classifier>sources</classifier>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>target</outputDirectory>
+                                    <destFileName>${artifactId}-${version}-sources.jar</destFileName>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.netbeans.api</groupId>
+                                    <artifactId>org-openide-util</artifactId>
+                                    <version>RELEASE68</version>
+                                    <classifier>javadoc</classifier>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>target</outputDirectory>
+                                    <destFileName>${artifactId}-${version}-javadoc.jar</destFileName>
+                                </artifactItem>
+                            </artifactItems>
                         </configuration>
                     </execution>
                 </executions>
